# x_make_github_clones_x

./: CHANGELOG.md  README.md  README.md_bak  __init__.py  downstream_example.py  json_contracts.py  mypy.ini  pyproject.toml  pyrightconfig.json  setup.py  x_cls_clone_all_x.py  x_cls_make_github_clones_x.py  x_cls_make_github_clones_x.py.bak
fastapi/: __init__.py  cli.py
fastapi_cli/: __init__.py  cli.py
json_contracts/: __init__.py  _impl.py
reports/: x_make_github_clones_x_run_20251017_230605.json  x_make_github_clones_x_run_20251017_231556.json  x_make_github_clones_x_run_20251017_231631.json  x_make_github_clones_x_run_20251018_003228.json  x_make_github_clones_x_run_20251018_003345.json  x_make_github_clones_x_run_20251018_003749.json  x_make_github_clones_x_run_20251019_200812.json  x_make_github_clones_x_run_20251019_200925.json  x_make_github_clones_x_run_20251019_201200.json  x_make_github_clones_x_run_20251020_214102.json  x_make_github_clones_x_run_20251022_140104.json  x_make_github_clones_x_run_20251022_232738.json  x_make_github_clones_x_run_20251024_034705.json  x_make_github_clones_x_run_20251025_062858.json  x_make_github_clones_x_run_20251102_224050.json  x_make_github_clones_x_run_20251102_224147.json  x_make_github_clones_x_run_20251102_224351.json  x_make_github_clones_x_run_20251102_224431.json  x_make_github_clones_x_run_20251102_225612.json  x_make_github_clones_x_run_20251102_225657.json  x_make_github_clones_x_run_20251102_230306.json  x_make_github_clones_x_run_20251102_230429.json  x_make_github_clones_x_run_20251102_231129.json  x_make_github_clones_x_run_20251103_000029.json  x_make_github_clones_x_run_20251103_000452.json  x_make_github_clones_x_run_20251103_001543.json  x_make_github_clones_x_run_20251103_002432.json  x_make_github_clones_x_run_20251103_003342.json  (+4 more)
(+12 files in other folders)
